--- a/app/templates/mapping.hbs
+++ b/app/templates/mapping.hbs
@@ -26,14 +26,12 @@
       {{/each}}
     </tbody>
   </table>
-
   {{#each-in oaFields as |field category|}}
     <form class="ui form segment">
       <div class="required field">
         <label>{{field}}{{ui-popup tagName="i" class="help circle icon" content="the house number of an address"}}</label>
-        {{#if category.action}}
           <div class="ui stackable three column center aligned grid">
-            <div class="seven wide column">
+            <div class={{if category.action "seven wide column" "sixteen wide column"}}>
              {{#ui-dropdown class="selection fluid" onChange=(action "chooseColumn" field) as |execute mapper|}}
                 <div class="default text">Source column headings</div>
                 <i class="dropdown icon"></i>
@@ -46,6 +44,7 @@
                 </div>
               {{/ui-dropdown}}
             </div>
+          {{#if category.action}}
             <div class="two wide column">
               <a class="item">
                 <i class="plus icon"></i>
@@ -64,20 +63,11 @@
                 </div>
               {{/ui-dropdown}}
             </div>
-          </div>
+          {{/if}}
+        </div>
+        {{#if category.action}}
           <button class="ui button basic mini blue" onClick={{action "removeJoin" field}}>Remove join</button>
         {{else}}
-          {{#ui-dropdown class="selection" onChange=(action "chooseColumn" field) as |execute mapper|}}
-            <div class="default text">Source column headings</div>
-            <i class="dropdown icon"></i>
-            <div class="menu">
-              {{#each columnHeadings as |heading|}}
-                <div class="item" data-value="{{map-value mapper heading}}">
-                  {{heading}}
-                </div>
-              {{/each}}
-            </div>
-          {{/ui-dropdown}}
           <button class="ui button basic mini blue" onClick={{action "addJoin" field}}>Join two columns for this field</button>
         {{/if}}
       </div>
