--- a/app/templates/mapping.hbs
+++ b/app/templates/mapping.hbs
@@ -26,12 +26,12 @@
       {{/each}}
     </tbody>
   </table>
-  {{#each-in oaFields as |field category|}}
+  {{#each-in model.oaFields as |field properties|}}
     <form class="ui form segment">
       <div class="required field">
         <label>{{field}}{{ui-popup tagName="i" class="help circle icon" content="the house number of an address"}}</label>
           <div class="ui stackable three column center aligned grid">
-            <div class={{if category.action "seven wide column" "sixteen wide column"}}>
+            <div class={{if properties.action "seven wide column" "sixteen wide column"}}>
              {{#ui-dropdown class="selection fluid" onChange=(action "chooseColumn" field) as |execute mapper|}}
                 <div class="default text">Source column headings</div>
                 <i class="dropdown icon"></i>
@@ -44,7 +44,7 @@
                 </div>
               {{/ui-dropdown}}
             </div>
-          {{#if category.action}}
+          {{#if properties.action}}
             <div class="two wide column">
               <a class="item">
                 <i class="plus icon"></i>
@@ -65,7 +65,7 @@
             </div>
           {{/if}}
         </div>
-        {{#if category.action}}
+        {{#if properties.action}}
           <button class="ui button basic mini blue" onClick={{action "removeJoin" field}}>Remove join</button>
         {{else}}
           <button class="ui button basic mini blue" onClick={{action "addJoin" field}}>Join two columns for this field</button>
