--- a/app/templates/mapping.hbs
+++ b/app/templates/mapping.hbs
@@ -32,9 +32,6 @@
         <label>{{field}}{{ui-popup tagName="i" class="help circle icon" content="the house number of an address"}}</label>
           <div class="ui stackable three column center aligned grid">
             <div class={{if (eq properties.action "join") "seven wide column" "sixteen wide column"}}>
-              {{#if (eq properties.action "split")}}
-                1. Choose column to split:
-              {{/if}}
               {{#ui-dropdown class="selection fluid" onChange=(action "chooseColumn" field) as |execute mapper|}}
                 <div class="default text">
                     Source column headings
@@ -52,14 +49,43 @@
                 {{#if properties.columns}}
                   {{#if properties.extractionFunction}}
                     {{#if (eq properties.extractionFunction "removeDuplicateValue")}}
-                      nothin' to see here
+                      <div class="ui segments">
+                        <div class="ui segment">
+                          <p>Choose the column with the value you'd like to remove from the first column</p>
+                        </div>
+                        <div class="ui segment">
+                          {{#ui-dropdown class="selection fluid" onChange=(action "chooseColumnToRemove" field) as |execute mapper|}}
+                            <div class="default text">
+                                Source column headings
+                            </div>
+                            <i class="dropdown icon"></i>
+                            <div class="menu">
+                              {{#each columnHeadings as |heading|}}
+                                <div class="item" data-value="{{map-value mapper heading}}">
+                                  {{heading}}
+                                </div>
+                              {{/each}}
+                            </div>
+                          {{/ui-dropdown}}
+                        </div>
+                      </div>
                     {{/if}}
                   {{else}}
-                    2. Choose a split method:<br>
-                    <button class="ui button basic green" onClick={{action "setExtractionFunction" field "removePrefixNumber" "Remove prefix street"}}>Remove prefix number</button>
-                    <button class="ui button basic green" onClick={{action "setExtractionFunction" field "removePostfixStreet" "Remove postfix street"}}>Remove postfix street</button>
-                    <button class="ui button basic green" onClick={{action "setExtractionFunction" field "removeDuplicateValue"}}>Remove value found an another column</button>
+                    <div class="ui segments">
+                      <div class="ui segment">
+                        <p>Choose a split method:</p>
+                      </div>
+                      <div class="ui segment">
+                          <button class="ui button basic green" onClick={{action "setExtractionFunction" field "removePrefixNumber" "Remove prefix street"}}>Remove prefix number</button>
+                          <button class="ui button basic green" onClick={{action "setExtractionFunction" field "removePostfixStreet" "Remove postfix street"}}>Remove postfix street</button>
+                          <button class="ui button basic green" onClick={{action "setExtractionFunction" field "removeDuplicateValue"}}>Remove value found an another column</button>
+                      </div>
+                    </div>
                   {{/if}}
+                {{else}}
+                  <div class="ui segment">
+                    <p>Choose a column to split</p>
+                  </div>
                 {{/if}}
               {{/if}}
             </div>
