set up helper to show example value in column-slection drop downs

--- a/app/templates/mapping.hbs
+++ b/app/templates/mapping.hbs
@@ -40,7 +40,7 @@
                 <div class="menu">
                   {{#each columnHeadings as |heading|}}
                     <div class="item" data-value="{{map-value mapper heading}}">
-                      {{heading}}
+                      {{heading}} (example value: {{sample-data user_data=user_data heading=heading}})
                     </div>
                   {{/each}}
                 </div>
